# TerraGrade

./: README.md  pyproject.toml  requirements.txt
src/: gradetf.py  terraform_grader.py
terraform/: global-vars.tf
terraform/management-account/bastion/: README.md  bastion.tf
terraform/management-account/day0/: tstate.tf  variables.tf  vars.tfvars
terraform/networking/: README.md  tstate.tf  vars.tfvars
terraform/org-creation/: README.md  tstate.tf  vars.tfvars
terraform/org-onboarding/: README.md  tstate.tf
