[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "terraform-grader"
version = "0.1.0"
description = "A script to evaluate and grade Terraform configurations against AWS Conformance Pack criteria defined in YAML files."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-hcl2 = "^0.3.3"
PyYAML = "^5.4"

[tool.poetry.dev-dependencies]
